--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="relative container mx-auto p-6">
+  <nav class="container mx-auto p-6">
     <!-- Flex container -->
     <div class="flex items-center justify-between text-center">
       <!-- Logo -->
@@ -53,24 +53,24 @@
 
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden space-x-6">
-      <div id="menu" class="absolute flex flex-col items-center self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-0 right-0">
-        <div class="cursor-pointer hover:text-darkGrayishBlue">
+      <div id="menu" class="absolute flex flex-col items-center self-end p-8 mt-6 left-0 right-0 space-y-3 font-bold bg-brightRed sm:w-auto sm:self-center">
+        <div class="cursor-pointer hover:text-veryLightGray">
           <a href="#hot-coffee">Hot Coffee</a>
           <div>កាហ្វេក្តៅ</div> 
         </div>
-        <div class="cursor-pointer hover:text-darkGrayishBlue">
+        <div class="cursor-pointer hover:text-veryLightGray">
           <a href="#iced-coffee">Iced Coffee</a>
           <div>កាហ្វេទឹកកក</div> 
         </div>
-        <div class="cursor-pointer hover:text-darkGrayishBlue">
+        <div class="cursor-pointer hover:text-veryLightGray">
           <a href="#frappe">Frappe</a>
           <div>ហ្រ្វាបប៉េ</div>
         </div>
-        <div class="cursor-pointer hover:text-darkGrayishBlue">
+        <div class="cursor-pointer hover:text-veryLightGray">
           <a href="#smoothie">Smoothie</a>
           <div>ស្មូតធី</div>
         </div>
-        <div class="cursor-pointer hover:text-darkGrayishBlue">
+        <div class="cursor-pointer hover:text-veryLightGray">
           <a href="#galerie">Galarie</a>
           <div>រូបភាព</div>
         </div>
@@ -81,7 +81,7 @@
   <!-- Hero -->
   <section id="hero">
     <!-- Flex container -->
-    <div class="container flex items-center justify-around px-6 mx-auto mt-6 space-y-0 md:space-y-0 md:flex-row py-32">
+    <div class="container flex items-center justify-around px-6 mx-auto space-y-0 md:space-y-0 md:flex-row">
       <!-- Left Item -->
       <div class="flex flex-col space-y-12">
         <h1 class="max-w-md text-5xl font-bold text-center md:text-6xl">Welcome to Espresso Eliza</h1>
@@ -111,14 +111,14 @@
                 01
               </div>
               <h3 class="text-base font-bold md:mb-4 md:hidden">
-                Order Now & get 10% off
+                Order now & get 10% off
               </h3>
             </div>
           </div>
 
           <div>
             <h3 class="hidden mb-4 text-lg font-bold md:block">
-              Order Now & get 10% off
+              Order now & get 10% off
             </h3>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam maxime velit, obcaecati, a nostrum odio rem odit natus.</p>
@@ -180,21 +180,21 @@
         <!-- Testimonail 1 -->
         <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
           <img src="img/btkdevkh.png" class="w-16 -mt-14 rounded-full" alt="">
-          <h5 class="text-lg font-bold">Bunthoeun Kong</h5>
+          <h5 class="text-lg font-bold">Bunthoeun</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas minus error necessitatibus distinctio corrupti id, beatae sunt laborum tenetur officiis ea doloremque quo neque iusto eum? Ea porro voluptatum libero?</p>
         </div>
 
         <!-- Testimonail 2 -->
         <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3">
-          <img src="img/btkdevkh.png" class="w-16 -mt-14 rounded-full" alt="">
-          <h5 class="text-lg font-bold">Bella</h5>
+          <img src="img/hong.png" class="w-16 -mt-14 rounded-full" alt="">
+          <h5 class="text-lg font-bold">Kimhong</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas minus error necessitatibus distinctio corrupti id, beatae sunt laborum tenetur officiis ea doloremque quo neque iusto eum? Ea porro voluptatum libero?</p>
         </div>
 
         <!-- Testimonail 3 -->
         <div class="hidden flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3">
-          <img src="img/btkdevkh.png" class="w-16 -mt-14 rounded-full" alt="">
-          <h5 class="text-lg font-bold">Sophie</h5>
+          <img src="img/sophy.png" class="w-16 -mt-14 rounded-full" alt="">
+          <h5 class="text-lg font-bold">Sophy</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas minus error necessitatibus distinctio corrupti id, beatae sunt laborum tenetur officiis ea doloremque quo neque iusto eum? Ea porro voluptatum libero?</p>
         </div>
       </div>
@@ -222,7 +222,7 @@
 
   <!-- Footer -->
   <footer class="bg-veryDarkBlue">
-    <div class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 text-center md:flex-row md:space-y-0">
+    <div class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0">
       <!-- Logo & Social links Container -->
       <div class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
 
